#!/usr/bin/env python
# (C) Copyright 2024 ECMWF.
#
# This software is licensed under the terms of the Apache Licence Version 2.0
# which can be obtained at http://www.apache.org/licenses/LICENSE-2.0.
# In applying this licence, ECMWF does not waive the privileges and immunities
# granted to it by virtue of its status as an intergovernmental organisation
# nor does it submit to any jurisdiction.

# https://packaging.python.org/en/latest/guides/writing-pyproject-toml/

[build-system]
requires = ["setuptools>=60", "setuptools-scm>=8.0"]

[project]
description = "A package to hold various functions to support training of ML models on ECMWF data."
name = "anemoi-utils"

dynamic = ["version"]
license = { file = "LICENSE" }
requires-python = ">=3.9"

authors = [
    { name = "European Centre for Medium-Range Weather Forecasts (ECMWF)", email = "software.support@ecmwf.int" },
]

keywords = ["tools", "ai"]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Operating System :: OS Independent",
]

dependencies = [
    "tomli", # Only needed before 3.11
    "pyyaml",
]

[project.optional-dependencies]
provenance = ["GitPython", "nvsmi"]

text = ["termcolor"]

grib = ["requests"]

# Loaded by read-the-docs
# `pip install .[docs]`
docs = [
    "tomli",     # Only needed before 3.11
    "termcolor",
    "requests",
]

all = [
    "tomli",     # Only needed before 3.11
    "GitPython",
    "nvsmi",
    "termcolor",
    "requests",
]

dev = [
    "tomli",     # Only needed before 3.11
    "GitPython",
    "nvsmi",
    "termcolor",
    "requests",
    "sphinx",
    "sphinx_rtd_theme",
    "nbsphinx",
    "pandoc",
]

[project.urls]
Homepage = "https://github.com/ecmwf/anemoi-utils/"
Documentation = "https://anemoi-utils.readthedocs.io/"
Repository = "https://github.com/ecmwf/anemoi-utils/"
Issues = "https://github.com/ecmwf/anemoi-utils/issues"
# Changelog = "https://github.com/ecmwf/anemoi-utils/CHANGELOG.md"


[tool.setuptools_scm]
version_file = "src/anemoi/utils/_version.py"

[tool.setuptools.package-data]
"anemoi.utils.mars" = ["*.yaml"]
