#!/usr/bin/env python
# (C) Copyright 2024 ECMWF.
#
# This software is licensed under the terms of the Apache Licence Version 2.0
# which can be obtained at http://www.apache.org/licenses/LICENSE-2.0.
# In applying this licence, ECMWF does not waive the privileges and immunities
# granted to it by virtue of its status as an intergovernmental organisation
# nor does it submit to any jurisdiction.

# https://packaging.python.org/en/latest/guides/writing-pyproject-toml/

[build-system]
requires = [ "setuptools>=60", "setuptools-scm>=8" ]

[project]
name = "anemoi-utils"

description = "A package to hold various functions to support training of ML models on ECMWF data."
keywords = [ "ai", "tools" ]

license = { file = "LICENSE" }
authors = [
  { name = "European Centre for Medium-Range Weather Forecasts (ECMWF)", email = "software.support@ecmwf.int" },
]

requires-python = ">=3.9"

classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]

dynamic = [ "version" ]
dependencies = [
  "aniso8601",
  "importlib-metadata; python_version<'3.10'",
  "python-dateutil",
  "pyyaml",
  "tomli; python_version<'3.11'",
  "tqdm",
]

optional-dependencies.all = [ "anemoi-utils[grib,provenance,text]" ]
optional-dependencies.dev = [ "anemoi-utils[all,docs,tests]" ]

optional-dependencies.docs = [
  "nbsphinx",
  "pandoc",
  "requests",
  "sphinx",
  "sphinx-argparse<0.5",
  "sphinx-rtd-theme",
  "termcolor",
]

optional-dependencies.grib = [ "requests" ]

optional-dependencies.provenance = [ "gitpython", "nvsmi" ]

optional-dependencies.tests = [ "pytest" ]

optional-dependencies.text = [ "termcolor", "wcwidth" ]

urls.Documentation = "https://anemoi-utils.readthedocs.io/"
urls.Homepage = "https://github.com/ecmwf/anemoi-utils/"
urls.Issues = "https://github.com/ecmwf/anemoi-utils/issues"
urls.Repository = "https://github.com/ecmwf/anemoi-utils/"

scripts.anemoi-utils = "anemoi.utils.__main__:main"

[tool.setuptools.package-data]
"anemoi.utils.mars" = [ "*.yaml" ]

[tool.setuptools_scm]
version_file = "src/anemoi/utils/_version.py"
